--- a/src/simulation/CMakeLists.txt
+++ b/src/simulation/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(simulator)
+project(simulation)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  nav_msgs
   roscpp
   rospy
-  srmauv_msgs
   std_msgs
+  nav_msgs
+  srmauv_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -67,10 +67,11 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   nav_msgs#   srmauv_msgs#   std_msgs
-# )
+#generate_messages(
+#  DEPENDENCIES
+#  std_msgs
+#  nav_msgs
+#)
 
 ###################################
 ## catkin specific configuration ##
@@ -82,10 +83,10 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES simulator
-#  CATKIN_DEPENDS nav_msgs roscpp rospy srmauv_msgs std_msgs
-#  DEPENDS system_lib
+  INCLUDE_DIRS include
+  LIBRARIES Simulation
+  CATKIN_DEPENDS roscpp rospy std_msgs nav_msgs message_runtime
+  DEPENDS system_lib
 )
 
 ###########
@@ -96,25 +97,31 @@ catkin_package(
 ## Your package locations should be listed before other locations
 # include_directories(include)
 include_directories(
+  include
   ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a cpp library
-# add_library(simulator
-#   src/${PROJECT_NAME}/simulator.cpp
+# add_library(Simulation
+#   src/${PROJECT_NAME}/Simulation.cpp
 # )
 
 ## Declare a cpp executable
-# add_executable(simulator_node src/simulator_node.cpp)
+# add_executable(Simulation_node src/Simulation_node.cpp)
+add_executable(keyboard_control src/keyboard_control.cpp)
+add_executable(simulator  src/simulator.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(simulator_node simulator_generate_messages_cpp)
+# add_dependencies(Simulation_node Simulation_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(simulator_node
+# target_link_libraries(Simulation_node
 #   ${catkin_LIBRARIES}
 # )
+target_link_libraries(keyboard_control ${catkin_LIBRARIES})
+target_link_libraries(simulator  ${catkin_LIBRARIES})
+
 
 #############
 ## Install ##
@@ -131,7 +138,7 @@ include_directories(
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS simulator simulator_node
+# install(TARGETS Simulation Simulation_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -156,7 +163,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_simulator.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_Simulation.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
